src/css/global.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
    --ifm-color-primary: #333333;
    --ifm-color-primary-dark: #404040;
    --ifm-color-primary-darker: #555555;
    --ifm-color-primary-darkest: #7c7c7c;
    --ifm-color-primary-light: #fbbf24;
    --ifm-color-primary-lighter: #1a8e71;
    --ifm-color-primary-lightest: #0093d8;
    --ifm-color-primary-red: #9f1239;
    --ifm-color-primary-black: #0d0d0d;
    --ifm-color-primary-bg: rgba(255, 255, 255, 0.75);
    --ifm-color-primary-subtitle: #474747;
    --ifm-code-font-size: 95%;
    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
    --ifm-color-primary: #c8c8c8;
    --ifm-color-primary-dark: #a5a5a5;
    --ifm-color-primary-darker: #858585;
    --ifm-color-primary-darkest: #606060;
    --ifm-color-primary-light: #fbbf24;
    --ifm-color-primary-lighter: #22c59a;
    --ifm-color-primary-lightest: #00a9ff;
    --ifm-color-primary-red: #9f1239;
    --ifm-color-primary-black: #0d0d0d;
    --ifm-color-primary-bg: rgba(28, 28, 28, 0.75);
    --ifm-color-primary-subtitle: #cccccc;
    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

* {
    font-family: Helvetica, Arial, Tahoma, Verdana, sans-serif;
}

p {
    margin-top: -1vh;
}

a {
    color: var(--ifm-color-primary-lightest);
}

a:hover {
    color: var(--ifm-color-primary-lightest);
}

code {
    color: var(--ifm-color-primary-lighter);
}

h5 {
    font-size: 1.675vh;
}

.hash-link {
    color: var(--ifm-color-primary);
}

.hash-link:hover {
    color: var(--ifm-color-primary);
}

.theme-edit-this-page {
    color: var(--ifm-color-primary-darker);
}

.theme-edit-this-page:hover {
  color: var(--ifm-color-primary);
}

.card {
    color: var(--ifm-color-primary);
}

.card:hover {
    color: var(--ifm-color-primary-dark);
}

.pagination-nav__link {
    color: var(--ifm-color-primary-dark);
}

.pagination-nav__link:hover {
    color: var(--ifm-color-primary-darker);
}

.navbar {
    background-color: var(--ifm-color-primary-red);
    color: #ffffff;
    height: 7.5vh;
}

.navbar__items {
    color: #ffffff;
}

.clean-btn:hover {
    background-color: transparent;
}

.navbar__title {
    color: #ffffff;
}

.navbar__link {
    color: #ffffff;
}

.navbar__link:hover {
    color: #ffffff;
}

.dropdown__menu {
    background-color: var(--ifm-color-primary-red);
}

.dropdown__link {
    color: #ffffff;
}

.dropdown__link:hover {
    color: #d6d6d6;
}

.footer {
    background-color: var(--ifm-color-primary-black);
    color: #ffffff;
}

.footer__link-item {
    color: #c7c7c7;
}

.footer__copyright {
    color: #737373;
    font-size: small;
}

.img_ev3q {
    height: 7.5vh;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.navbar__item_discord {
    background-color: var(--ifm-color-primary-lightest);
    padding: 1.5vh;
    border-radius: 12px;
    color: white;
    position: absolute;
    right: 150px;
    top: 15px;
    height: 5vh;
    width: 5vh;
}

.navbar__item_discord_img {
    width: 28px;
    height: 28px;
    position: relative;
    /*right: 1px;*/
    bottom: 4px;
}

